--- a/VolumeControlPlugin/CMakeLists.txt
+++ b/VolumeControlPlugin/CMakeLists.txt
@@ -2,6 +2,13 @@ cmake_minimum_required(VERSION 3.15)
 
 project(VolumeControlPlugin VERSION 1.0.0)
 
+# Set architecture settings for cross-compilation
+if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
+    set(JUCE_TARGET_ARCHITECTURE "x64" CACHE STRING "Target architecture for JUCE" FORCE)
+    set(VST3_SDK_TARGET_ARCHITECTURE "x86_64" CACHE STRING "VST3 architecture" FORCE)
+    set(JUCE_DISABLE_RUNTIME_ARCH_DETECTION ON CACHE BOOL "Disable runtime architecture detection" FORCE)
+endif()
+
 # Force JUCE to enable X11 and GTK support (for GUI builds on Linux)
 set(JUCE_ENABLE_X11 ON)
 
