refactor: remove cross-compilation configurations

--- a/VolumeControlPlugin/CMakeLists.txt
+++ b/VolumeControlPlugin/CMakeLists.txt
@@ -2,20 +2,15 @@ cmake_minimum_required(VERSION 3.15)
 
 project(VolumeControlPlugin VERSION 1.0.0)
 
-# Set architecture settings for cross-compilation
-if(CMAKE_SYSTEM_NAME STREQUAL "Windows" OR DEFINED JUCE_WINDOWS)
-    set(JUCE_TARGET_ARCHITECTURE "x86_64" CACHE STRING "Target architecture for JUCE" FORCE)
-    set(VST3_ARCHITECTURE "x86_64" CACHE STRING "VST3 architecture" FORCE)
-    set(JUCE_DISABLE_RUNTIME_ARCH_DETECTION ON CACHE BOOL "Disable runtime architecture detection" FORCE)
-    message(STATUS "Windows build detected, skipping Linux dependencies")
-    set(WINDOWS_BUILD TRUE)
-endif()
-
-# Include the JUCE CMake utilities (do this early to ensure JUCE variables are set)
+# Include the JUCE CMake utilities
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../JUCE JUCE_build)
 
-# Only include Linux-specific dependencies when not building for Windows
-if(NOT DEFINED WINDOWS_BUILD)
+# Platform-specific settings
+if(WIN32)
+    message(STATUS "Windows build detected")
+    set(JUCE_TARGET_ARCHITECTURE "x86_64" CACHE STRING "Target architecture for JUCE" FORCE)
+    set(VST3_ARCHITECTURE "x86_64" CACHE STRING "VST3 architecture" FORCE)
+else()
     message(STATUS "Linux build detected, including Linux dependencies")
     # Force JUCE to enable X11 and GTK support (for GUI builds on Linux)
     set(JUCE_ENABLE_X11 ON)
@@ -74,7 +69,34 @@ target_sources(VolumeControlPlugin
 target_compile_features(VolumeControlPlugin PRIVATE cxx_std_17)
 
 # Add required JUCE modules (platform-specific)
-if(NOT DEFINED WINDOWS_BUILD)
+if(WIN32)
+    # Windows build just needs JUCE modules
+    target_link_libraries(VolumeControlPlugin
+        PRIVATE
+            juce::juce_audio_utils
+        PUBLIC
+            juce::juce_recommended_config_flags
+            juce::juce_recommended_lto_flags
+            juce::juce_recommended_warning_flags)
+
+    # Include directories for Windows
+    target_include_directories(VolumeControlPlugin
+        PRIVATE
+            ${CMAKE_CURRENT_SOURCE_DIR}/Source)
+            
+    # Windows-specific compiler flags
+    target_compile_options(VolumeControlPlugin PRIVATE
+        $<$<COMPILE_LANGUAGE:CXX>:/W4 /bigobj /wd4996 /wd4267>
+        $<$<COMPILE_LANGUAGE:C>:/W4 /bigobj>)
+    
+    # Windows-specific link flags
+    set_target_properties(VolumeControlPlugin PROPERTIES
+        LINK_FLAGS "/SUBSYSTEM:WINDOWS")
+        
+    # Ensure we're using correct runtime library
+    set_property(TARGET VolumeControlPlugin PROPERTY
+        MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
+else()
     # Linux build needs additional libraries
     target_link_libraries(VolumeControlPlugin
         PRIVATE
@@ -94,37 +116,7 @@ if(NOT DEFINED WINDOWS_BUILD)
             ${GTK3_INCLUDE_DIRS}
             ${WEBKIT2GTK_INCLUDE_DIRS}
             ${CURL_INCLUDE_DIRS})
-else()
-    # Windows build just needs JUCE modules
-    target_link_libraries(VolumeControlPlugin
-        PRIVATE
-            juce::juce_audio_utils
-        PUBLIC
-            juce::juce_recommended_config_flags
-            juce::juce_recommended_lto_flags
-            juce::juce_recommended_warning_flags)
-
-    # Include directories for Windows
-    target_include_directories(VolumeControlPlugin
-        PRIVATE
-            ${CMAKE_CURRENT_SOURCE_DIR}/Source)
-endif()
-
-# Platform-specific compiler flags
-if(CMAKE_SYSTEM_NAME STREQUAL "Windows" OR DEFINED WINDOWS_BUILD)
-    # Remove pthread flag for Windows builds
-    target_compile_options(VolumeControlPlugin PRIVATE
-        $<$<COMPILE_LANGUAGE:CXX>:/W4 /bigobj /wd4996 /wd4267>
-        $<$<COMPILE_LANGUAGE:C>:/W4 /bigobj>)
-    
-    # Remove any Linux-specific link flags
-    set_target_properties(VolumeControlPlugin PROPERTIES
-        LINK_FLAGS "/SUBSYSTEM:WINDOWS")
-        
-    # Ensure we're using correct runtime library
-    set_property(TARGET VolumeControlPlugin PROPERTY
-        MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
-else()
+            
     # Linux-specific flags
     target_compile_options(VolumeControlPlugin PRIVATE
         $<$<COMPILE_LANGUAGE:CXX>:-Wall -Wextra -pthread>
